recursion.lessons.recursion.koch.Crab.scala.error
Crab:2: error: '(' expected but identifier found.
	if levels(>0){
           ^Crab:9: error: illegal start of simple expression
}
^